--- a/index.html
+++ b/index.html
@@ -14,37 +14,74 @@
 
 <body>
     <!-- NAVIGATION------------------------------------------>
+       <!-- NAVIGATION------------------------------------------>
     <nav>
+        <div>
+            <button class="hamburger" aria-label="Åpne meny">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
         <logo>FRAM</logo>
-    </nav>
+        
+        <button class="green-button">0</button>
+ 
+
+        <!-- pop-up -->
+
+        <dialog class="dropdown-menu" aria-label="menu">
+            <div class="menu-content">
+ 
+                <button class="close" aria-label="close menu"> &times;</button> <!-- &times = kryss -->
+                <hr class="menu-line">
+                <ul class="nav-menu">
+                    <li><a href="product.html">PRODUCTS</a></li>
+                    <li><a href="chatbot.html">CHAT</a></li>
+                    <li class="last_link"><a href="">CHECKOUT</a></li>
+                </ul>
+            </div>
+        </dialog>
+<script>
+ 
+
+</script>
+
+</nav>
 
     <!-- HEADER------------------------------------------>
     <header>
         <div class="top-image">
             <img src="https://assets.codepen.io/13779024/Hovedbilde-desktop-lite.jpg" alt="Utsikt over fjellandskap. Foto: Markus Spiske via Unsplash">
-            <h1>FRAM</h1>
+        </div>
+		<div class="header-text">
+			<h1>FRAM</h1>
             <span class="vertical-line"></span>
             <p>Home delivery from <br>your local farms</p>
-        </div>
+		</div>
     </header>
 
     <main>
         <!-- WHITE BOXES------------------------------------------>
         <section class="white-boxes">
-            <div class="white-box border-right">
-                <h2 class="grotesk">Shop our seasonal<br> selection</h2>
-                <p class="frank front-frank">Updated every week</p>
-                <img class="standard-img white-img" src="https://assets.codepen.io/13779024/greens-front.jpg" alt="Kurv med grønnsaker. Foto: Nina Luong via Unsplash">
-                <p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
-                <button class="red-button grotesk">Browse our selection</button>
-            </div>
-            <div class="white-box">
-                <h2 class="grotesk">Ask us about<br> anything</h2>
-                <p class="frank front-frank">All your questions answered</p>
-                <img class="standard-img white-img" src="https://assets.codepen.io/13779024/Man-field_front.jpg" alt="Mann står i en åker og peker. Foto: Rebecca Ritchie via Unsplash">
-                <p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
-                <button class="red-button grotesk">Go to chat</button>
-            </div>
+			<div class="container">
+				<div class="white-box">
+					<h2 class="grotesk">Shop our seasonal<br> selection</h2>
+					<p class="frank front-frank">Updated every week</p>
+					<img class="standard-img white-img" src="https://assets.codepen.io/13779024/greens-front.jpg"
+						alt="Kurv med grønnsaker. Foto: Nina Luong via Unsplash">
+					<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
+					<button class="red-button grotesk">Browse our selection</button>
+				</div>
+				<div class="white-box">
+					<h2 class="grotesk">Ask us about<br> anything</h2>
+					<p class="frank front-frank">All your questions answered</p>
+					<img class="standard-img white-img" src="https://assets.codepen.io/13779024/Man-field_front.jpg"
+						alt="Mann står i en åker og peker. Foto: Rebecca Ritchie via Unsplash">
+					<p class="frank front-frank">New produce is added continuously as time<br> goes by and the seasons change.</p>
+					<button class="red-button grotesk">Go to chat</button>
+				</div>
+			</div>
         </section>
 
         <!-- HOW IT WORKS------------------------------------------>
@@ -82,55 +119,53 @@
         </section>
 
         <!-- POPULAR PRODUCE ------------------------------------------>
-        <section class="popular">
-            <h2 class="grotesk">POPULAR PRODUCE</h2>
-        
-        <div class="product-container">
-
-
-            <!-- Produktkort 1: Oats -->
-	
-            <div class="product-card">
-				<div class="relative">
-                <img src="https://assets.codepen.io/13779024/web_grain.jpg" alt="Oats" class="product-image">
-				<button class="add-to-basket">Add to basket ↑</button>
+		<section class="popular">
+			<div class="container">
+				<h2 class="grotesk">POPULAR PRODUCE</h2>
+			
+				<div class="product-container product-container-swipe">
+			
+					<!-- Produktkort 1: Oats -->
+			
+					<div class="product-card">
+						<div class="relative">
+							<img src="https://assets.codepen.io/13779024/web_grain.jpg" alt="Oats" class="product-image">
+							<button class="add-to-basket">Add to basket ↑</button>
+						</div>
+						<div class="product-name-price">
+							<span class="product-name">Oats</span>
+							<span class="product-price">48 kr / kg</span>
+						</div>
+						<div class="product-weight">1 kg</div>
+					</div>
+			
+					<!-- Produktkort 2: Red Onions -->
+					<div class="product-card">
+						<div class="relative">
+							<img src="https://assets.codepen.io/13779024/web_onions.jpg" alt="Red Onions" class="product-image">
+							<button class="add-to-basket">Add to basket ↑</button>
+						</div>
+						<div class="product-name-price">
+							<span class="product-name">Red Onions</span>
+							<span class="product-price">48 kr / kg</span>
+						</div>
+						<div class="product-weight">0.5 kg</div>
+					</div>
+			
+					<!-- Produktkort 3: Garlic -->
+					<div class="product-card">
+						<div class="relative">
+							<img src="https://assets.codepen.io/13779024/web_garlic.jpg" alt="Garlic" class="product-image">
+							<button class="add-to-basket">Add to basket ↑</button>
+						</div>
+						<div class="product-name-price">
+							<span class="product-name">Garlic</span>
+							<span class="product-price">48 kr / kg</span>
+						</div>
+						<div class="product-weight">0,2 kg</div>
+					</div>
 				</div>
-                <div class="product-name-price">
-                    <span class="product-name">Oats</span>
-                    <span class="product-price">48 kr / kg</span>
-                </div>
-                <div class="product-weight">1 kg</div>
-            </div>
-		
-
-
-            <!-- Produktkort 2: Red Onions -->
-            <div class="product-card">
-				<div class="relative">
-                <img src="https://assets.codepen.io/13779024/web_onions.jpg" alt="Red Onions" class="product-image">
-				 <button class="add-to-basket">Add to basket ↑</button>
-				</div>
-                <div class="product-name-price">
-                    <span class="product-name">Red Onions</span>
-                    <span class="product-price">48 kr / kg</span>
-                </div>
-                <div class="product-weight">0.5 kg</div>
 			</div>
-
-            <!-- Produktkort 3: Garlic -->
-            <div class="product-card">
-				<div class="relative">
-                <img src="https://assets.codepen.io/13779024/web_garlic.jpg" alt="Garlic" class="product-image">
-  				<button class="add-to-basket">Add to basket ↑</button>
-				</div>
-                <div class="product-name-price">
-                    <span class="product-name">Garlic</span>
-                    <span class="product-price">48 kr / kg</span>
-                </div>
-                <div class="product-weight">0,2 kg</div>
-				</div>
-
-        </div>
 		</section>
     </main>
 
