--- a/chatbot.html
+++ b/chatbot.html
@@ -21,6 +21,8 @@
     <nav>
         <div>
             <button class="hamburger" aria-label="Åpne meny">
+ <!-- Hver <span> lager en strek i hamburgerikonet -->
+
                 <span></span>
                 <span></span>
                 <span></span>
@@ -66,6 +68,7 @@
       </div>
 
       <!-- Koble til JavaScript (OpenAI SDK må være inkludert her) -->
+       <!-- "defer" gjør at skriptene kjører etter at HTMLen er lest inn -->
       <script src="scripts/chatbot.js" defer></script>
       <script src="scripts/index.js" defer></script>
     </main>
